k8s/controllers/login/login-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ingress
  annotations:
    konghq.com/strip-path: "true"   # Remove o caminho "/login" antes de encaminhar
spec:
  rules:
  - host: exchange.seudominio.com
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3001
